--- a/network/CE-110_Lab_Jennifer2.ipynb
+++ b/network/CE-110_Lab_Jennifer2.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,11 +125,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unweighted upstream graph built.\n"
+     ]
+    }
+   ],
    "source": [
-    "new_upstream_example.upstream(\"YOUR UTILITY NAME HERE\")"
+    "new_upstream_example.upstream(\"San Jose Water Company\")"
    ]
   },
   {
@@ -141,9 +149,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Graph is weighted.\n"
+     ]
+    }
+   ],
    "source": [
     "new_upstream_example.balance_graph()"
    ]
@@ -157,9 +173,300 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>node</th>\n",
+       "      <th>kwh/af</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>WWT1805083</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>R_Tuolumn</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>RES1805081</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Lk_OrovilleSWP</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>SW1802SWP01</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>R_AmericanMFRK</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>R_AmericanSFRK</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>LK_TrinityCVP</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>LK_ShastaCVP</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>R_Stanislaus</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>R_Mokelumn</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>R_Calaveras</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>R_SanJoaquin</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>RES1805089</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>GILROY-HOLLISTER VALLEY</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>LLAGAS AREA</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>SANTA CLARA VALLEY</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>SANTA CLARA</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>RES_1805085</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>1805085REC</td>\n",
+       "      <td>108.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>1805085NPD</td>\n",
+       "      <td>344.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>SW1805081SYS</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>SW1805081EB</td>\n",
+       "      <td>0.700000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>SW1802SWP02</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>R_Feather</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>R_AmericanNFRK</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>R_American</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>R_Sacramento</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>SFBayDelta</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>CVP_SFBayDelta</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>SW_CVP-DMC</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>SWP_SFBayDelta</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>SW1804SWP06</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>SW_CVP-ONL</td>\n",
+       "      <td>251.640000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>SW_CVP-Gianelli</td>\n",
+       "      <td>315.360000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>SW1804SWP07</td>\n",
+       "      <td>338.920000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>SW1805SWP08</td>\n",
+       "      <td>1304.155000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>SW_CVP-Pacheco</td>\n",
+       "      <td>702.370000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>SW_CVP-Coyot</td>\n",
+       "      <td>957.250000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>1805089PD</td>\n",
+       "      <td>693.934909</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>1805085PD</td>\n",
+       "      <td>641.065754</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>San Jose Water Company</td>\n",
+       "      <td>956.939177</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       node       kwh/af\n",
+       "0                WWT1805083     0.000000\n",
+       "1                 R_Tuolumn     0.000000\n",
+       "2                RES1805081     0.000000\n",
+       "3            Lk_OrovilleSWP     0.000000\n",
+       "4               SW1802SWP01     0.000000\n",
+       "5            R_AmericanMFRK     0.000000\n",
+       "6            R_AmericanSFRK     0.000000\n",
+       "7             LK_TrinityCVP     0.000000\n",
+       "8              LK_ShastaCVP     0.000000\n",
+       "9              R_Stanislaus     0.000000\n",
+       "10               R_Mokelumn     0.000000\n",
+       "11              R_Calaveras     0.000000\n",
+       "12             R_SanJoaquin     0.000000\n",
+       "13               RES1805089     0.000000\n",
+       "14  GILROY-HOLLISTER VALLEY     0.000000\n",
+       "15              LLAGAS AREA     0.000000\n",
+       "16       SANTA CLARA VALLEY     0.000000\n",
+       "17              SANTA CLARA     0.000000\n",
+       "18              RES_1805085     0.000000\n",
+       "19               1805085REC   108.000000\n",
+       "20               1805085NPD   344.000000\n",
+       "21             SW1805081SYS     0.000000\n",
+       "22              SW1805081EB     0.700000\n",
+       "23              SW1802SWP02     0.000000\n",
+       "24                R_Feather     0.000000\n",
+       "25           R_AmericanNFRK     0.000000\n",
+       "26               R_American     0.000000\n",
+       "27             R_Sacramento     0.000000\n",
+       "28               SFBayDelta     0.000000\n",
+       "29           CVP_SFBayDelta     0.000000\n",
+       "30               SW_CVP-DMC     0.000000\n",
+       "31           SWP_SFBayDelta     0.000000\n",
+       "32              SW1804SWP06     0.000000\n",
+       "33               SW_CVP-ONL   251.640000\n",
+       "34          SW_CVP-Gianelli   315.360000\n",
+       "35              SW1804SWP07   338.920000\n",
+       "36              SW1805SWP08  1304.155000\n",
+       "37           SW_CVP-Pacheco   702.370000\n",
+       "38             SW_CVP-Coyot   957.250000\n",
+       "39                1805089PD   693.934909\n",
+       "40                1805085PD   641.065754\n",
+       "41   San Jose Water Company   956.939177"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "new_upstream_example.table()\n",
     "new_upstream_example.energy"
@@ -181,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +638,7 @@
     }
    ],
    "source": [
-    "table_2010 = get_sankey_file('data/links_erl.csv', 2010, '1805085E', './output/sanjose2015.csv')"
+    "table_2010 = get_sankey_file('data/links_erl.csv', 2010, '1805085E', './output/sanjose2010.csv')"
    ]
   },
   {
@@ -350,15 +657,6 @@
     "6. Go to the website linked above\n",
     "7. Click on the 'Choose file' button\n",
     "8. Choose the csv file, 2010_sankey.csv"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "table_2010.to_csv('output/2010_sankey.csv', index=False)"
    ]
   },
   {
@@ -388,11 +686,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unweighted upstream graph built.\n"
+     ]
+    }
+   ],
    "source": [
-    "table_2015_predicted = get_sankey_file('data/links_erl.csv', 2015, 'YOUR UTILITY CODE HERE', upstream=True)"
+    "table_2015_predicted = get_sankey_file('data/links_erl.csv', 2015, '1805085E', './output/sanjose_predicted2015.csv')"
    ]
   },
   {
@@ -413,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -425,16 +731,7 @@
     }
    ],
    "source": [
-    "table_2015_actual = get_sankey_file('data/links_2015module.csv', 2015, '1805003E', './output/alameda2015.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "table_2015_actual.to_csv('output/2015_actual.csv', index = False)"
+    "table_2015_actual = get_sankey_file('data/links_2015module.csv', 2015, '1805085E', './output/sanjose2015.csv')"
    ]
   },
   {
