--- a/network/CE-110_Lab_Jennifer3.ipynb
+++ b/network/CE-110_Lab_Jennifer3.ipynb
@@ -46,34 +46,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "distributed 1.21.8 requires msgpack, which is not installed.\n",
-      "datascience 0.10.6 has requirement folium==0.2.1, but you'll have folium 0.7.0 which is incompatible.\n",
-      "You are using pip version 10.0.1, however version 19.0.3 is available.\n",
-      "You should consider upgrading via the 'python -m pip install --upgrade pip' command.\n",
-      "distributed 1.21.8 requires msgpack, which is not installed.\n",
-      "datascience 0.10.6 has requirement folium==0.2.1, but you'll have folium 0.7.0 which is incompatible.\n",
-      "You are using pip version 10.0.1, however version 19.0.3 is available.\n",
-      "You should consider upgrading via the 'python -m pip install --upgrade pip' command.\n",
-      "distributed 1.21.8 requires msgpack, which is not installed.\n",
-      "datascience 0.10.6 has requirement folium==0.2.1, but you'll have folium 0.7.0 which is incompatible.\n",
-      "You are using pip version 10.0.1, however version 19.0.3 is available.\n",
-      "You should consider upgrading via the 'python -m pip install --upgrade pip' command.\n",
-      "distributed 1.21.8 requires msgpack, which is not installed.\n",
-      "datascience 0.10.6 has requirement folium==0.2.1, but you'll have folium 0.7.0 which is incompatible.\n",
-      "You are using pip version 10.0.1, however version 19.0.3 is available.\n",
-      "You should consider upgrading via the 'python -m pip install --upgrade pip' command.\n",
-      "Enabling notebook extension jupyter-sankey-widget/extension...\n",
-      "      - Validating: ok\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!pip install -q pydot\n",
     "!pip install -q ipywidgets\n",
@@ -129,7 +104,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_upstream_example.upstream(\"YOUR UTILITY NAME HERE\")"
+    "new_upstream_example.upstream(\"San Jose Water Company\")"
    ]
   },
   {
@@ -228,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,19 +294,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Unweighted upstream graph built.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "table_2010 = get_sankey_file('data/links_erl.csv', 2010, '1805085E', './output/sanjose2015.csv')"
+    "table_2010 = get_sankey_file('data/links_erl.csv', 2010, '1805085E', './output/sanjose2010.csv')"
    ]
   },
   {
@@ -350,15 +317,6 @@
     "6. Go to the website linked above\n",
     "7. Click on the 'Choose file' button\n",
     "8. Choose the csv file, 2010_sankey.csv"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "table_2010.to_csv('output/2010_sankey.csv', index=False)"
    ]
   },
   {
@@ -392,16 +350,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "table_2015_predicted = get_sankey_file('data/links_erl.csv', 2015, 'YOUR UTILITY CODE HERE', upstream=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "table_2015_predicted.to_csv('output/2015_predicted.csv', index = False)"
+    "table_2015_predicted = get_sankey_file('data/links_erl.csv', 2015, '1805085E', './output/sanjose_predicted2015.csv')"
    ]
   },
   {
@@ -413,28 +362,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Unweighted upstream graph built.\n"
-     ]
-    }
-   ],
-   "source": [
-    "table_2015_actual = get_sankey_file('data/links_2015module.csv', 2015, '1805003E', './output/alameda2015.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "table_2015_actual.to_csv('output/2015_actual.csv', index = False)"
+    "table_2015_actual = get_sankey_file('data/links_2015module.csv', 2015, '1805085E', './output/sanjose2015.csv')"
    ]
   },
   {
@@ -453,15 +385,6 @@
    "metadata": {},
    "source": [
     "*YOUR ANSWER HERE*"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "table_2015_predicted.to_csv('output/2015_predicted.csv', index = False)"
    ]
   },
   {
@@ -521,11 +444,30 @@
     "\n",
     "4. **`cumulative_volume_af`**: shows the total amount of volume transported from source and target (measured in acre-feet)\n",
     "\n",
-    "5. **`transmission_kwh/af`**: shows the amount of energy used during the transmission, where kWh/AF = kiloWatt-hours required to pump **one acre-foot** of water through the irrigation system.\n",
-    "\n",
-    "6. **`total_energy_kwh`**: shows the total amount of energy used during the transmission of the total volume of water, where kWh = kiloWatt-hours of electricity required to pump all the water through the irrigation system. \n",
+    "5. **`transmission_kwh/af`**: shows the amount of energy used during the transmission, where kWh/AF = kiloWatt-hours required to pump **one acre-foot** of water through the irrigation system. \n",
     "</div>\n",
-    "Note that each row contains information on water flow and energy use between a water source and its target (utility)."
+    "Note that each row contains information on water flow and energy use between a water source and its target (utility).\n",
+    "\n",
+    "\n",
+    "#### Creating Total Energy (kWh) Metric\n",
+    "\n",
+    "Notice that we have the pieces we need to calculate the **total amount of energy** consumed to transport the recorded acre feet of water: all we have to do is to multiply the two columns together. The code below calculates this new total energy metric, saves it as the variable `total_energy_kwh`, and adds a column called \"total_energy_kwh\" onto the `data` table.\n",
+    "\n",
+    "Notice the addition of this 6th column `total_energy_kwh`, which shows the total amount of energy used during the transmission of the total volume of water, where kWh = kiloWatt-hours of electricity required to pump all the water through the irrigation system."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creating the new metric: total energy (kwh) by multiplying the two \n",
+    "total_energy_kwh = data.column('transmission_kwh/af') * data.column('cumulative_volume_af')\n",
+    "\n",
+    "# \n",
+    "data = data.with_column(\"total_energy_kwh\", total_energy_kwh)\n",
+    "data"
    ]
   },
   {
