new edited notebook cleared

--- a/network/CE-110_Lab_Jennifer3.ipynb
+++ b/network/CE-110_Lab_Jennifer3.ipynb
@@ -294,11 +294,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'get_sankey_file' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-6-ccfad6714200>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mtable_2010\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mget_sankey_file\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'data/links_erl.csv'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m2010\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'1807057E'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'./output/cerritos2010.csv'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'get_sankey_file' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "table_2010 = get_sankey_file('data/links_erl.csv', 2010, '1805085E', './output/sanjose2010.csv')"
+    "table_2010 = get_sankey_file('data/links_erl.csv', 2010, '1807057E', './output/cerritos2010.csv')"
    ]
   },
   {
