--- a/network/Introduction.ipynb
+++ b/network/Introduction.ipynb
@@ -143,19 +143,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting numpy==1.16.* (from -r requirements (line 1))\n",
+      "  Downloading https://files.pythonhosted.org/packages/2e/11/f006363050b24fb19a235e5efd219e7ac549398d531110d80b8f2ba3a909/numpy-1.16.3-cp36-cp36m-win_amd64.whl (11.9MB)\n",
+      "Collecting matplotlib==3.* (from -r requirements (line 2))\n",
+      "  Downloading https://files.pythonhosted.org/packages/21/4c/35fa1837a705f33621604a1967b1505bd3f695940fdf02fad77ef11de196/matplotlib-3.0.3-cp36-cp36m-win_amd64.whl (9.1MB)\n",
+      "Collecting pandas==0.23.4 (from -r requirements (line 3))\n",
+      "  Using cached https://files.pythonhosted.org/packages/0e/67/def5bfaf4d3324fdb89048889ec523c0903c5efab1a64c8dbe0ac8eec13c/pandas-0.23.4-cp36-cp36m-win_amd64.whl\n",
+      "Requirement already satisfied: datascience==0.10.6 in c:\\users\\keiko\\anaconda3\\envs\\discovery\\lib\\site-packages (from -r requirements (line 4)) (0.10.6)\n",
+      "Requirement already satisfied: pydot==1.4.1 in c:\\users\\keiko\\anaconda3\\envs\\discovery\\lib\\site-packages (from -r requirements (line 5)) (1.4.1)\n",
+      "Collecting networkx==2.3 (from -r requirements (line 6))\n",
+      "  Downloading https://files.pythonhosted.org/packages/85/08/f20aef11d4c343b557e5de6b9548761811eb16e438cee3d32b1c66c8566b/networkx-2.3.zip (1.7MB)\n",
+      "Collecting scipy==1.2.1 (from -r requirements (line 7))\n",
+      "  Downloading https://files.pythonhosted.org/packages/b9/a2/62f77d2d3c42364d45ba714b4bdf7e1c4dfa67091dc9f614fa5a948b4fb4/scipy-1.2.1-cp36-cp36m-win_amd64.whl (30.2MB)\n",
+      "Collecting math==3.7.3 (from -r requirements (line 8))\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  ERROR: Could not find a version that satisfies the requirement math==3.7.3 (from -r requirements (line 8)) (from versions: none)\n",
+      "ERROR: No matching distribution found for math==3.7.3 (from -r requirements (line 8))\n"
+     ]
+    }
+   ],
    "source": [
     "# dependencies: THIS CELL MUST BE RUN\n",
+    "!pip install -r requirements\n",
+    "\n",
     "from datascience import *\n",
     "import numpy as np\n",
     "import math\n",
     "import matplotlib.pyplot as plt\n",
     "plt.style.use('fivethirtyeight')\n",
-    "import ipywidgets as widgets\n",
     "%matplotlib inline"
    ]
   },
