fixed import error; changed util names; added question; removed references to cerritos

--- a/network/Lab_WaterNetworks_Sp22.ipynb
+++ b/network/Lab_WaterNetworks_Sp22.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "**Part II: Analyzing Energy Use across Years**\n",
     "1. [Setting Up for Analysis](#section_setup)\n",
-    "2. [Diving In - Cerritos Example](#section_divein)\n",
+    "2. [Diving In - Daly City Example](#section_divein)\n",
     "3. [Your Turn](#section_yourturn)\n",
     "4. [Aggregating across All Utilities in California](#section_agg)\n",
     "\n",
@@ -27,14 +27,11 @@
     "\n",
     "Utility Code|Utility Name\n",
     "-|-\n",
-    "1805003E|Alameda County Water District\n",
-    "1803033E|Fresno City of\n",
-    "1810019E|Hi-Desert Water District\n",
-    "1807163E|Irvine Ranch Water District\n",
-    "1809027E|Palmdale Water District\n",
-    "1805081E|San Francisco Public Utilities Commission\n",
-    "1805085E|San Jose Water Company\n",
-    "1807341E|Santa Monica City of\n",
+    "1805033E        |         East Palo Alto, City of\n",
+    "1809027E        |         Palmdale Water District                               \n",
+    "1805085E         |        San Jose Water Company    \n",
+    "1807341E          |       Santa Monica City of                     \n",
+    "1803081E          |       Wasco City of\n",
     "\n",
     "<div class=\"alert alert-warning\"> \n",
     "\n",
@@ -50,13 +47,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Run this cell! This will take a minute\n",
     "\n",
-    "#!pip install -r requirements\n",
+    "try:\n",
+    "    from sub_network import subWESTnet\n",
+    "    from datascience import *\n",
+    "    import pandas as pd\n",
+    "    import numpy as np\n",
+    "    import matplotlib.pyplot as plt\n",
+    "    %matplotlib inline\n",
+    "    import json, urllib, ast\n",
+    "    import pydot\n",
+    "    #!pip install --upgrade pip\n",
+    "    # from ipysankeywidget import SankeyWidget\n",
+    "    # from ipywidgets import Layout\n",
+    "except ImportError as e:\n",
+    "    ! pip install -r requirements\n",
     "from sub_network import subWESTnet\n",
     "from datascience import *\n",
     "import pandas as pd\n",
@@ -901,18 +913,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "**Question:** What do you think caused a significant increase in usage of energy and volume of water between 2010 and 2015?"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "TYPE YOUR ANSWER"
    ]
@@ -926,9 +934,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "TYPE YOUR ANSWER"
    ]
@@ -944,7 +950,7 @@
     "\n",
     "## C. Your Turn!<a id='section_yourturn'></a>\n",
     "\n",
-    "Now that we've gone through an example analysis with the Cerritos Utility, you can follow the same steps to dig into your assigned utility."
+    "Now that we've gone through an example analysis with the Daly City Utility, you can follow the same steps to dig into your assigned utility."
    ]
   },
   {
@@ -1057,9 +1063,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Question:** How does the water use reported in the 2010 and 2015 UWMPs compare to what you have seen in the 2020 UWMPs?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*YOUR ANSWER HERE*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 3. Calculating Percent Change\n",
     "\n",
-    "Let's look at how much energy increased between year 2010 and 2015 for both energy and water. The steps here are exactly the same as you saw with the Cerritos example. **Fill in the '...' in the following code blocks to calculate the Percent Change!**\n",
+    "Let's look at how much energy increased between year 2010 and 2015 for both energy and water. The steps here are exactly the same as you saw with the Daly City example. **Fill in the '...' in the following code blocks to calculate the Percent Change!**\n",
     "\n",
     "#### Energy: What is the percent change of energy used between 2010 and 2015?"
    ]
@@ -1113,7 +1133,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Question:** How do your percent changes compare to what we saw with the Cerritos Utility? Does it demonstrate a similar trend? Does it support the hypothesis stated above that the drought might be at the root of the percent changes that you observe?"
+    "**Question:** How do your percent changes compare to what we saw with the Daly City Utility? Does it demonstrate a similar trend? Does it support the hypothesis stated above that the drought might be at the root of the percent changes that you observe?"
    ]
   },
   {
@@ -1266,7 +1286,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1280,9 +1300,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
